# korml.github.io

./: .coverage  .gitignore  .gitlab-ci.yml  REUSE.toml  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
_common/images/lexer-toplevel/: .gitignore  lexer-toplevel.tex  makefile
_common/images/lexer-toplevel/tex/: beamerfontthemeJuelich.sty  penchcommon.sty
_common/images/value/: .nvimrc  makefile  value.tex
_common/images/value/tex/: beamercolorthemeJuelich.sty  beamerinnerthemeJuelich.sty  beamerouterthemeJuelich.sty  beamerthemeJuelich.sty  penchbeamer.cls  penchmathsym.sty
paper/: makefile  paper.tex
paper/tex/: pencharticle.cls  penchbook.cls  penchmath.sty
testsuite/share/acceptance/001_basic_scalars/: basic_scalars.korml
testsuite/share/acceptance/002_basic_scalars/: basic_scalars.korml
testsuite/share/acceptance/003_basic_scalars/: basic_scalars.korml
testsuite/share/acceptance/004_basic_scalars/: basic_scalars.korml
testsuite/share/acceptance/005_basic_scalars/: basic_scalars.korml
testsuite/share/acceptance/006_basic_scalars/: basic_scalars.korml
testsuite/share/acceptance/007_basic_scalars/: basic_scalars.korml
testsuite/share/acceptance/008_basic_scalars/: basic_scalars.korml
testsuite/share/acceptance/009_basic_scalars/: basic_scalars.korml
website/: index.md  spec.md  syntax.md
website/docs/: index.md
website/old/: model.md  syntax.md
website/spec/: index.md  lexer.md
website/spec/old/: index.md
website/stylesheets/: extra.css
website/syntax/: 1.0.md  index.md
(+191 files in other folders)
